// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot matches main page title - h1 1`] = `
<div
  className="MuiBox-root css-1qk4flb"
>
  <h1
    className="MuiTypography-root MuiTypography-h1 css-1k1cq1y-MuiTypography-root"
  >
    Test h1
  </h1>
  <p
    className="MuiTypography-root MuiTypography-body1 css-ei54zl-MuiTypography-root"
  >
    Lorem ipsum dolor sit amet...
  </p>
</div>
`;

exports[`Snapshot matches paragraph title - h3 1`] = `
<div
  className="MuiBox-root css-1qk4flb"
>
  <h3
    className="MuiTypography-root MuiTypography-h3 css-181191u-MuiTypography-root"
  >
    Test h3
  </h3>
  <p
    className="MuiTypography-root MuiTypography-body1 css-ei54zl-MuiTypography-root"
  >
    Lorem ipsum dolor sit amet...
  </p>
</div>
`;
